--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Setup container environment
         run: |
           apt-get update
+          export DEBIAN_FRONTEND=noninteractive # for tzdata
           apt-get -y install --no-install-recommends \
             doxygen docbook-xsl docutils-doc xsltproc wget ca-certificates g++ \
             python3 python-is-python3 python3-jinja2 rsync git unzip
