Add tests to verify correct logging output based on log level
Summary:
related to T15252
- Add logger tests that verify correct logging output based on log_level & cover all functions and branches
- Changed default log_level to info

Reviewers: ivica

Reviewed By: ivica

Subscribers: iljazovic, miljen

Differential Revision: https://repo.mireo.local/D33830

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,7 +33,7 @@ jobs:
     container: ${{ matrix.container }}
     env:
       CXXFLAGS: ${{ matrix.cxxflags }}
-      LDFLAGS:  ${{ matrix.ldflags }}
+      LDFLAGS: ${{ matrix.ldflags }}
       CMAKE_BUILD_PARALLEL_LEVEL: 4
 
     steps:
@@ -82,3 +82,4 @@ jobs:
           disable_search: true
           fail_ci_if_error: true
           plugins: noop
+          token: ${{ secrets.CODECOV_TOKEN }}
